--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@supabase/supabase-js": "^2.50.3",
     "expo": "~53.0.17",
+    "expo-linking": "~7.1.7",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -20,8 +22,8 @@
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
     "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.6",
-    "expo-linking": "~7.1.7"
+    "undefined": "@react-native-async-storage/async-storageq\u0004\u0003",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
