--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "^4.11.1",
     "tailwindcss": "^3.4.17",
     "undefined": "@react-native-async-storage/async-storageq\u0004\u0003",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "@expo/vector-icons": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
